@@ -1,3 +1,9 @@
+2003-03-14  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03823] Re: etc.c: treatment for "%7E" is added to  expandName()
+	* url.c (parseURL2): file unquote
+	* etc.c (expandName): revert previous changes
+
 2003-03-14  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 03822] Re: etc.c: treatment for "%7E" is added to  expandName()
